hopefully this will prevent the scrollbar from showing when particles are outside screen

--- a/style.css
+++ b/style.css
@@ -266,6 +266,7 @@ option {
     background-color: white;
     animation: none;
     z-index: 4;
+    overflow: hidden;
 }
 
 @keyframes explode {
